feat: Add user page with header and footer templates
- Created a new header.html template for user pages.
- Updated index.html to change the title and add tooltips for form fields.
- Enhanced member registration form with better validation and tooltips.
- Added action buttons for editing and deleting members in the members table.
- Updated footer text to include MongoDB information.

test: Improve MemberController and RestService tests

- Added tests for showing registration form with and without members.
- Enhanced tests for member registration strategies.
- Added tests for error handling in member-related operations.
- Improved assertions and coverage for member service methods.

fix: Update exception handling tests for global exception handler

- Refactored tests to directly call exception handler methods.
- Improved assertions for exception messages and response structures.

test: Add tests for custom security handlers

- Implemented tests for CustomAccessDeniedHandler and CustomAuthenticationEntryPoint.
- Verified redirection behavior and logging for access denied and authentication exceptions.

test: Add tests for CustomUserDetailsService

- Implemented tests for loading user details by email.
- Verified exception handling for invalid and null email scenarios.

test: Enhance MemberService tests

- Added tests for updating and deleting members.
- Improved assertions for member retrieval and registration scenarios.